--- a/charts/blueprint-connectors-processing/values.yaml
+++ b/charts/blueprint-connectors-processing/values.yaml
@@ -2,6 +2,16 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
+variables:
+  rabbitmq:
+    host:
+      value: jx-staging-rabbitmq
+    username:
+      value: guest
+    password:
+      value: guest
+container:
+  javaOpts: -Xmx512m -Xms512m
 image:
   repository: draft
   tag: dev
